--- a/Training_FrontEnd/appsettings.json
+++ b/Training_FrontEnd/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "School": {
-    "BaseUrl": "http://saleh.runasp.net/api/",
-    "Endpoint": "Event"
+    "BaseUrl": "#",
+    "Endpoint": "#"
   }
 }
